# ovms-release

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  OWNERS  README.md  SKILL-diff.md  SKILL-e2e.md  SKILL-hotfix.md  SKILL-patch.md  SKILL-rebuild.md  SKILL.md  pyproject.toml  registry-entry.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/ovms-release/: SKILL.md
.claude/skills/ovms-release-diff/: SKILL.md
.claude/skills/ovms-release-e2e/: SKILL.md
.claude/skills/ovms-release-hotfix/: SKILL.md
.claude/skills/ovms-release-patch/: SKILL.md
.claude/skills/ovms-release-rebuild/: SKILL.md
.github/workflows/: lint-scripts.yml  test.yml  upstream-release-watcher.yml
references/: branch-naming.md  phase-details.md  protected-files.md  troubleshooting.md  workflow.md
scripts/: apply-patches.sh  check-image-labels.sh  check-pr-status.sh  check-prerequisites.sh  check-pypi-versions.py  check-rhds-sync.sh  cherry-pick.sh  cve-rebuild.sh  detect-upstream-releases.sh  diff-args.sh  generate-audit-report.sh  generate-ci-config.py  generate-release-notes.sh  jira-integration.sh  load-state.sh  mirror-branches.sh  notify.sh  patch-update.sh  preflight.sh  push-owners.sh  run-e2e-tests.sh  save-state.sh  sync-to-rhoai.sh  tree-transplant.sh  verify-sync.sh
src/ovms_release/: __init__.py  cli.py  config.py  context.py  state.py  tools.py
src/ovms_release/ops/: __init__.py  ci_config.py  diff_args.py  e2e.py  github.py  hotfix.py  image.py  jira.py  mirror.py  notes.py  notify.py  owners.py  patches.py  preflight.py  pypi.py  rebuild.py  rhds.py  sync_rhoai.py  sync_stable.py
templates/: build-args.conf.j2  ci-config.yaml.j2  release-state.yaml.j2
tests/: conftest.py  test_branch_naming.py  test_cli.py  test_config.py  test_ops_ci_config.py  test_ops_diff_args.py  test_ops_e2e.py  test_ops_github.py  test_ops_hotfix.py  test_ops_image.py  test_ops_jira.py  test_ops_mirror.py  test_ops_notes.py  test_ops_notify.py  test_ops_owners.py  test_ops_patches.py  test_ops_preflight.py  test_ops_pypi.py  test_ops_rebuild.py  test_ops_rhds.py  test_ops_sync_rhoai.py  test_ops_sync_stable.py  test_state.py  test_tools.py
tests/fixtures/: sample-ci-config-prev.yaml  sample-dockerfile-new.redhat  sample-dockerfile-old.redhat  sample-dockerfile.redhat  sample-release-state.yaml
