[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ovms-release"
version = "1.0.0"
description = "OVMS release automation CLI with pre-flight intelligence and stateful tracking"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.5",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[project.scripts]
ovms-release = "ovms_release.cli:release_app"
ovms-release-diff = "ovms_release.cli:diff_app"
ovms-release-rebuild = "ovms_release.cli:rebuild_app"
ovms-release-hotfix = "ovms_release.cli:hotfix_app"
ovms-release-patch = "ovms_release.cli:patch_app"
ovms-release-e2e = "ovms_release.cli:e2e_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ovms_release --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["ovms_release"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (typer pattern)
    "UP007",  # use X | Y for union types (keep Optional for 3.10 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["ovms_release"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
